Color switch fix, and collapse close smooth

--- a/src/app/components/settings-page/settings-page.component.css
+++ b/src/app/components/settings-page/settings-page.component.css
@@ -18,8 +18,18 @@ input:focus {
 	box-shadow: none;
 }
 
-.form-switch {
-	accent-color: #6b44d4;
+.form-check-input:focus,
+.form-check-input:active {
+	border-color: rgb(227, 227, 227) !important;
+	--bs-form-switch-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgba%280, 0, 0, 0.25%29'/%3e%3c/svg%3e") !important;
+	outline: none;
+	box-shadow: none;
+}
+
+.form-check-input:checked {
+	background-color: #6b44d4 !important;
+	--bs-form-switch-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e") !important;
+	border-color: #6b44d4 !important;
 }
 
 .purple-btn {
